<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        android:background="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rr_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size6"
                >

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_centerInParent="true"
                    android:src="@drawable/dailyreporting_logo"
                    />

            </RelativeLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rr_logo"
                android:layout_marginTop="@dimen/size2"
                android:layout_marginLeft="@dimen/size0"
                android:layout_marginRight="@dimen/size0"
                android:background="@color/white"
                >

            <RelativeLayout
                android:id="@+id/rr_companyid"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size19"



                android:background="@drawable/company_login_bg_green"

                >

                <EditText
                    android:id="@+id/edt_comid"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size3"

                    android:layout_marginLeft="@dimen/size1"
                    android:layout_marginRight="@dimen/size1"
android:layout_marginTop="@dimen/size4"
                    android:background="@drawable/x_companyid_bg"
android:hint="@string/entr_company_id"
android:textColor="@color/edittext_textcolor_green"
                    android:textColorHint="@color/edittext_textcolor_green"
android:paddingLeft="@dimen/size0"
                    android:singleLine="true"
                    android:textSize="@dimen/mrg4"

                    />

                <TextView
                    android:id="@+id/txt_comid_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:layout_marginLeft="@dimen/size1"
                    android:layout_marginRight="@dimen/size1"
                    android:layout_below="@+id/edt_comid"
                    android:textColor="@color/Red"
                    android:layout_marginTop="@dimen/mrg1"

                    android:text="@string/field"
                    android:visibility="gone"

                    />

                <TextView
                    android:id="@+id/txt_forgort_companyid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/size1"
                    android:layout_below="@+id/txt_comid_error"
android:text="@string/forgot_company_id"
                    android:layout_marginTop="@dimen/mrg2"
                    android:textColor="@color/edittext_textcolor_green"
                    android:textSize="@dimen/mrg4"

                    />
                <RelativeLayout
                    android:id="@+id/rr_submit"
                    android:layout_width="@dimen/size14"
                    android:layout_height="@dimen/size2"

                    android:layout_below="@+id/txt_forgort_companyid"

                    android:layout_centerHorizontal="true"
                    android:background="@drawable/x_et_reg_log_bg"
                    android:layout_marginTop="@dimen/size0"
                    android:visibility="visible"

                    >
                <ImageView

                    android:id="@+id/img_submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

                    <TextView
                        android:id="@+id/txt_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
android:layout_centerInParent="true"
                        android:text="@string/submit"
                        android:textColor="@color/txt_submit_color"
                        />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rr_submit_after"
                    android:layout_width="@dimen/size14"
                    android:layout_height="@dimen/size2"

                    android:layout_below="@+id/txt_forgort_companyid"

                    android:layout_centerHorizontal="true"
                    android:background="@drawable/x_aftersubmit_company"
                    android:layout_marginTop="@dimen/size0"
                    android:visibility="gone"

                    >
                    <ImageView

                        android:id="@+id/img_submit_after"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        />

                    <TextView
                        android:id="@+id/txt_submit_after"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        />

                </RelativeLayout>



            </RelativeLayout>

                <ProgressBar
                    android:id="@+id/loader"
                    android:layout_width="@dimen/size4"
                    android:layout_height="@dimen/size4"
android:layout_gravity="center"
                    android:visibility="gone"

                    />
            </FrameLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>